fix alignment of heading anchors

--- a/src/css/adoc/doc.css
+++ b/src/css/adoc/doc.css
@@ -88,26 +88,26 @@
   }
 
   & h1 .anchor {
-    margin-top: 15px;
+    margin-top: 11px;
   }
 
   & h2 .anchor {
-    margin-top: 10px;
+    margin-top: 6px;
   }
 
   & h3 .anchor {
-    margin-top: 5px;
+    margin-top: 1px;
   }
 
   & h4 .anchor {
     @media (--md) {
-      margin-top: 4px;
+      margin-top: 2px;
     }
   }
 
   & h5 .anchor {
     @media (--md) {
-      margin-top: 3px;
+      margin-top: 0;
     }
   }
 
